--- a/src/templates/form.html
+++ b/src/templates/form.html
@@ -210,6 +210,14 @@
       <input class="input" type="range" name="points" min="0" max="1" step="0.001" onchange="updateRangeInput('max-liveness', this.value);"/>
       <input class="input-field" type="text" size="5" id="max-liveness" value="" min="0" max="0" onchange="updateRangeInput('max-liveness', this.value);">
 
+      <h2>
+          Custom Filters
+      </h2>
+      <div data-tip="The maximum number of songs per artist you want on the generated playlist. A smaller value means a more diverse but potentially sparse playlist.">
+        <a>Maximum Tracks Per Artist:</a><br>
+        <input class="input" type="number" id="max-tracks-per-artist" size="5" placeholder="100" min="1" max="100"><br>
+      </div>
+
     </div>
 
       <a href="#" role="button" class="btn btn-primary" onclick="generateRecs('{{ base_url }}')">Generate</a>
