add static assets, get form and form js working, fix numerous bugs in recommendation code

--- a/src/templates/form.html
+++ b/src/templates/form.html
@@ -2,17 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <script src="../scripts/recForm.js"></script>
-    <link rel="icon" href="../static/favicon.ico" />
+    <script src="../static/form.js"></script>
+    <link rel="stylesheet" href="../static/form.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="../static/logo192.png" />
-    <link rel="manifest" href="../static/manifest.json" />
     <title>Generate Recommendations</title>
   </head>
   <body>
