--- a/src/templates/form.html
+++ b/src/templates/form.html
@@ -44,7 +44,7 @@
       </div>
 
       <div data-tip="A list of comma separated Spotify seed genres to generate recommendations from">
-        <a href="https://developer.spotify.com/console/get-available-genre-seeds/">Seed Genres:</a>
+        <a href="https://developer.spotify.com/console/get-available-genre-seeds/">Seed Genres:</a><br>
         <input class="input" type="text" id="seed-genres" size="100" placeholder="alternative, pop, metal, ..."><br>
       </div>
 
