--- a/src/templates/main.html
+++ b/src/templates/main.html
@@ -5,6 +5,10 @@
 </head>
 <body>
     <div id="app"></div>
+    <script>
+        window.base_url = '{{ base_url }}';
+    </script>
     <script src="static/bundle.js"></script>
 </body>
 </html>
+
