add warning about seeds

--- a/src/templates/form.html
+++ b/src/templates/form.html
@@ -47,6 +47,9 @@
         <a href="https://developer.spotify.com/console/get-available-genre-seeds/">Seed Genres:</a><br>
         <input class="input" type="text" id="seed-genres" size="100" placeholder="alternative, pop, metal, ..."><br>
       </div>
+      <p>
+        * There can be no more than five total combined seed tracks, artists, and genres
+      </p>
 
       <h2>
           Filter Information
