--- a/src/templates/form.html
+++ b/src/templates/form.html
@@ -34,17 +34,17 @@
       </div>
 
       <div data-tip="A list of comma separated Spotify track ID's, URL's, or URI's to generate recommendations from">
-        <a>Seed Tracks:</a><br>
+        <a>*Seed Tracks:</a><br>
         <input class="input" type="text" id="seed-tracks" size="100" placeholder="spotify:track:6AioOohg4bQZFA4jIYQQ2r, spotify:track:0pwObEOHolQZSldJ2q1wpyr, ..."><br>
       </div>
 
       <div data-tip="A list of comma separated Spotify artist ID's, URL's, or URI's to generate recommendations from">
-        <a>Seed Artists:</a><br>
+        <a>*Seed Artists:</a><br>
         <input class="input" type="text" id="seed-artists" size="100" placeholder="spotify:artist:2yEwvVSSSUkcLeSTNyHKh8, spotify:artist:4DFhHyjvGYa9wxdHUjtDkc, ..."><br>
       </div>
 
       <div data-tip="A list of comma separated Spotify seed genres to generate recommendations from">
-        <a href="https://developer.spotify.com/console/get-available-genre-seeds/">Seed Genres:</a><br>
+        <a href="https://developer.spotify.com/console/get-available-genre-seeds/">*Seed Genres:</a><br>
         <input class="input" type="text" id="seed-genres" size="100" placeholder="alternative, pop, metal, ..."><br>
       </div>
       <p>
