--- a/src/templates/form.html
+++ b/src/templates/form.html
@@ -23,7 +23,7 @@
         <input class="input" type="text" id="playlist-name" size="50" placeholder="My Recommendation Playlist"><br>
       </div>
 
-      <div data-tip="The max recommendations per call. Appliies per track if a playlist is given.">
+      <div data-tip="The max recommendations per call. Applies per track if a playlist is given.">
         <a>Recommendation Limit:</a><br>
         <input class="input" type="number" id="rec-limit" size="5" placeholder="100" min="1" max="100"><br>
       </div>
