seed genres should still be a link

--- a/src/templates/form.html
+++ b/src/templates/form.html
@@ -52,7 +52,9 @@
           </div>
 
           <div data-tip="A list of comma separated Spotify seed genres to generate recommendations from">
-            <div class="text">*Seed Genres:</div>
+            <div class="text" >
+              <a href="https://developer.spotify.com/console/get-available-genre-seeds/">*Seed Genres:</a>
+            </div>
             <input class="input" type="text" id="seed-genres" placeholder="alternative, pop, metal, ..."><br>
           </div>
           <p>
